# dewbee

./: .gitignore  HB_Hygro_v0_0.gh  HB_Hygro_v0_0_clean.gh  README.md  __init__.py  bump.ps1  bump.sh  hygro_material.py  installer.ghx  moisture_source.py  multiyear_sql.py  pyproject.toml  release.ps1  release.sh  sql.py  utils.py
.github/workflows/: publish.yml
dewbee/: __init__.py  hygro_material.py  multiyear_sql.py  utils.py  versioning.py
grasshopper/: __init__.py
grasshopper/icon/: Dewbee.afdesign  Dewbee.afdesign~lock~
grasshopper/src/: DB Deconstruct Hygrothermal Material.py  DB Dump or Merge Objects.py  DB Faces by Algorithm.py  DB Hygrothermal Material.py  DB Installer and Updater.py  DB Is Hygrothermal Material.py  DB Liquid Coefficients.py  DB Moisture Source.py  DB Process MASEA Data.py  DB Read Face Result for Multiple Years.py  DB Read Room Comfort Result for Multiple Years.py  DB Read Room Energy Result for Multiple Years.py  DB Run HAMT Simulation.py  DB Sorption Isotherm.py  DB Sync Grasshopper File.py  DB Wet Thermal Conductivity.py  __init__.py
grasshopper/user_objects/: DB Deconstruct Hygrothermal Material.ghuser  DB Dump or Merge Objects.ghuser  DB Faces by Algorithm.ghuser  DB Hygrothermal Material.ghuser  DB Installer and Updater.ghuser  DB Is Hygrothermal Material.ghuser  DB Liquid Coefficients.ghuser  DB Moisture Source.ghuser  DB Process MASEA Data.ghuser  DB Read Face Result for Multiple Years.ghuser  DB Read Room Comfort Result for Multiple Years.ghuser  (+6 more)
samples/: DB Material Creation.ghx  DB Shoexbox HAMT.ghx  template.gh
(+8 files in other folders)
